--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,7 @@
 			<h5 id="bankBalance">銀行ETH餘額 (wei): </h5>
 			<!--
 				TODO
+				Add coinBalance
 			-->
             <h5 id="coinBalance">NCCU Coin 餘額: </h5>
 			
@@ -66,6 +67,7 @@
 
 			<!--
 				TODO
+				...
 			-->
             <h3>鑄 NCCU Coin (帳戶請選擇合約的owner)</h3>
 			<input id="mintValue" type="number" placeholder="請輸入NCCU Coin金額">
